--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,49 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+	--radial-gradient-background: 250, 250, 250;
+	--solid-color-background: 15, 15, 15;
+	--overlay-color: 255, 255, 255;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+	@apply bg-[#050b22];
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.radial-gradient {
+	background: radial-gradient(
+			circle at 50% 0%,
+			rgba(var(--radial-gradient-background), 0.05) 0%,
+			transparent 60%
+		)
+		rgba(var(--solid-color-background), 1);
+}
+
+.linear-mask {
+	mask-image: linear-gradient(
+		-75deg,
+		white calc(var(--x) + 20%),
+		transparent calc(var(--x) + 30%),
+		white calc(var(--x) + 100%)
+	);
+	-webkit-mask-image: linear-gradient(
+		-75deg,
+		white calc(var(--x) + 20%),
+		transparent calc(var(--x) + 30%),
+		white calc(var(--x) + 100%)
+	);
+}
+
+.linear-overlay {
+	background-image: linear-gradient(
+		-75deg,
+		rgba(var(--overlay-color), 0.1) calc(var(--x) + 20%),
+		rgba(var(--overlay-color), 0.5) calc(var(--x) + 25%),
+		rgba(var(--overlay-color), 0.1) calc(var(--x) + 100%)
+	);
+	mask: linear-gradient(black, black) content-box, linear-gradient(black, black);
+	-webkit-mask: linear-gradient(black, black) content-box,
+		linear-gradient(black, black);
+	mask-composite: exclude;
+	-webkit-mask-composite: xor;
 }
