--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,3 +112,28 @@ body {
 	border-radius: 5px;
 	cursor: pointer;
 }
+
+.loader {
+	border-top-color: #3498db;
+	-webkit-animation: spin 1s linear infinite; /* Safari */
+	animation: spin 1s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+	0% {
+		-webkit-transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+	}
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
